ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bookmyshow-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: bookmyshow.vaaisshnnu.live
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: bookmyshow-service
                port:
                  number: 80
